# GxFGenie

./: .gitignore  Makefile  README.md  defs.mk  pyproject.toml  setup.cfg
dev/docs/: to-do.org
doc/: to-do.org
gxfgenie/: __init__.py  defs.py  errors.py  fileops.py  gff3_dataset.py  gff3_parser.py  gtf_parser.py  gxf_data.py  gxf_dataset.py  gxf_parser.py  gxf_rec.py  gxf_record.py  objdict.py  range_index.py
tests/: Makefile  README.md  conftest.py  support.py  test_gff3.py  test_gff3_parse.py  test_gtf.py  test_gtf_parse.py
tests/expected/: test_gff3.py::test_good[gencode_pseudo].gff3  test_gff3.py::test_good[gencode_set1].gff3  test_gff3.py::test_good[gencode_tags].gff3  test_gff3.py::test_good[gencode_v21].gff3  test_gff3.py::test_good[gencode_v27.par].gff3  test_gff3.py::test_good[gff3_good_geneTranscript].gff3  test_gff3.py::test_good[gff3_good_mm10Gencode].gff3  test_gff3.py::test_good[gff3_good_noId].gff3  test_gff3_parse.py::test_good[gencode_polyA].gff3  test_gff3_parse.py::test_good[gff3_good_discontinuous].gff3  test_gff3_parse.py::test_good[gff3_good_frameShifts].gff3  test_gff3_parse.py::test_good[gff3_good_geneMRna].gff3  test_gff3_parse.py::test_good[gff3_good_hprc].gff3  test_gff3_parse.py::test_good[gff3_good_ncbiProblems].gff3  test_gff3_parse.py::test_good[gff3_good_ncbiRefSeq.pseudoGenes].gff3  test_gff3_parse.py::test_good[gff3_good_ncbiSegments].gff3  test_gtf.py::test_good[gencode_tags].gtf  test_gtf.py::test_good[gencode_v19].gtf  test_gtf.py::test_good[gencode_v21].gtf  test_gtf.py::test_good[gencode_v27.par].gtf  (+3 more)
(+15 files in other folders)
