[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gxfgenie"
version = "0.1.0"
description = "Reading and writing of GTF or GFF3 genome annotation files"
authors = [
    {name = "Mark Diekhans", email = "markd@ucsc.edu"}
]
license = {text = "BSD 3-Clause"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipettor>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "flake8>=7.1.1",
]
